attempt to fix splash on safari

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -22,6 +22,7 @@ h1 {
 	margin: 0;
 }
 .text-hvcenter {
+	text-align: center;
 	max-height: 100%;
 	min-height: 85vh;
 	display: flex;
